[gd_scene load_steps=10 format=3 uid="uid://c0esliyv3lh8c"]

[ext_resource type="Script" path="res://scripts/knightWeapon.gd" id="1_61w15"]
[ext_resource type="Texture2D" uid="uid://1sxppw74e4jd" path="res://assets/weapons/broadsword.png" id="2_k7dbx"]
[ext_resource type="Texture2D" uid="uid://b1vmqu74f1l5l" path="res://assets/weapons/shield.png" id="3_54kf2"]

[sub_resource type="Animation" id="Animation_p104m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("primaryWeapon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("primaryWeapon/Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("primaryWeapon:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_k7dbx")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("primaryWeapon/Area2D/CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, 22)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("secondaryWeapon/StaticBody2D/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("secondaryWeapon:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4jtu4"]
resource_name = "knight_primary"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("primaryWeapon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("primaryWeapon/Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("primaryWeapon:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_k7dbx")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("primaryWeapon/Area2D/CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, 22)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.698132, -0.523599, 0.523599, 0.698132, 0.698132, 0.0]
}

[sub_resource type="Animation" id="Animation_y82n4"]
resource_name = "knight_secondary"
length = 0.02
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("secondaryWeapon/StaticBody2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("secondaryWeapon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mnq37"]
_data = {
"RESET": SubResource("Animation_p104m"),
"knight_primary": SubResource("Animation_4jtu4"),
"knight_secondary": SubResource("Animation_y82n4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u55li"]
size = Vector2(6, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yc2mf"]
size = Vector2(8, 26)

[node name="knightWeapon" type="Node2D" groups=["weapon"]]
script = ExtResource("1_61w15")

[node name="weaponAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mnq37")
}

[node name="primaryWeapon" type="Sprite2D" parent="."]
visible = false
rotation = -0.523599
texture = ExtResource("2_k7dbx")

[node name="Area2D" type="Area2D" parent="primaryWeapon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="primaryWeapon/Area2D"]
position = Vector2(-2.38418e-07, 8.9407e-07)
shape = SubResource("RectangleShape2D_u55li")
disabled = true

[node name="secondaryWeapon" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_54kf2")

[node name="StaticBody2D" type="StaticBody2D" parent="secondaryWeapon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secondaryWeapon/StaticBody2D"]
shape = SubResource("RectangleShape2D_yc2mf")
disabled = true

[connection signal="body_entered" from="primaryWeapon/Area2D" to="." method="_on_area_2d_body_entered"]
